# timeseries_tutorial

./: readme.md
timeseries_102/notebooks/: 01_live_ coding.ipynb  02_live_coding.ipynb  02_main_code.ipynb  03_live_coding.ipynb  03_main_code.ipynb  04_sarima_model.ipynb  04_sarima_modeling.ipynb  04_sarima_theory.ipynb
timeseries_103/: .gitignore  03_timeseries.pptx  pyproject.toml  readme.md
timeseries_103/data/processed/: results_arima.csv
timeseries_103/notebooks/: 01-Forecasting_with_SARIMAX.ipynb  02_forecasting_with_facebook_prophet.ipynb  03-Forecasting_with_Facebook_Prophet.ipynb  03_forecasting_with_lightgbm.ipynb  04_forecasting_with_deeplearning.ipynb  04_forecasting_with_dl.ipynb
