[project]
name = "timeseries-103"
version = "0.1.0"
description = ""
authors = [
    {name = "PantosThn",email = "pantos.thn@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=1.21.0,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "statsmodels (>=0.14.4,<0.15.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "notebook (>=7.3.3,<8.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "prophet (>=1.1.6,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "plotly (>=6.0.1,<7.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "optuna (>=4.2.1,<5.0.0)",
    "shap (>=0.47.1,<0.48.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "astral (>=3.2,<4.0)",
    "skforecast (>=0.15.1,<0.16.0)",
    "feature-engine (>=1.8.3,<2.0.0)",
    "xgboost (>=3.0.0,<4.0.0)",
    "catboost (>=1.2.7,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
